--- a/class1.ipynb
+++ b/class1.ipynb
@@ -18,7 +18,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -1851,7 +1850,9 @@
     }
    ],
    "source": [
-    "pip install scipy"
+    "pip install scipy\n",
+    "\n",
+    "# 使用 Python 中的 scipy.stats 模块可以方便地进行 Winsorize 操作"
    ]
   },
   {
